# wordcopilot-context-lab

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
configs/: default.yaml
data/: README.md
scripts/: compare_predictions.py  demo_example.py  evaluate_predictions.py  run_experiment.py
src/context_lab/: __init__.py  chunking.py  config.py  data.py  eval.py  generation.py  pipeline.py  retrieval.py  selection.py  utils.py
src/wordcopilot_context_lab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_selection.py
